creat account page

--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -32,7 +32,8 @@
         <div class="text-center mb-4">
             <img class="mb-4" src="~/icons/BFicon.png" alt="" width="72" height="72">
             <h1 class="h3 mb-3 font-weight-normal">Botox Ground</h1>
-            <p>Kill-to-Earn</p>
+
+            <h4>Login for <strong class="text-danger">Kill To Earn</strong></h4>
         </div>
         <div asp-validation-summary="All" class="text-danger"></div>
         <div class="form-label-group">
