some cmall fixes

--- a/Views/Employee/AddorEdit.cshtml
+++ b/Views/Employee/AddorEdit.cshtml
@@ -43,7 +43,7 @@
 
         <div class="form-label-group">
             <input asp-for="Phone" class="form-control" placeholder="PayTM Number" required="">
-            <label asp-for="Phone">Password</label>
+            <label asp-for="Phone"></label>
             <span asp-validation-for="Phone" class="text-danger"></span>
         </div>
 
