--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,6 +2,8 @@
     ViewData["Title"] = "Home Page";
 }
 
+
+
 <div class="text-center">
     <h1 class="display-4">
         <img src="~/icons/BGlogo.png" class="img-fluid" style="width:30%" />
@@ -14,8 +16,31 @@
 </div>
 <br />
 <div class="text-center text-break">
-    <button class="btn btn-dark" onclick="FetchTounament()" >Load More</button>
+    <button class="btn btn-dark" id="loadmore" onclick="FetchTounament()">Load More</button>
 </div>
+
+
+@*<div class="toast" id="myToast" style="position: absolute; top: 0; right: 0;">
+    <div class="toast-header">
+        <strong class="mr-auto"><i class="fa fa-grav"></i> We miss you!</strong>
+        <small>11 mins ago</small>
+        <button type="button" class="ml-2 mb-1 close" data-dismiss="toast">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+    <div class="toast-body">
+        <div>It's been a long time since you visited us. We've something special for you. <a href="#">Click here!</a></div>
+    </div>
+</div>*@
 @section scripts {
     <script src="~/js/tournament.js"></script>
+<script>
+
+    $(document).ready(function () {
+        console.log('dd');
+        $(".show-toast").click(function(){
+            $("#myToast").toast('show');
+        });
+    });
+</script>
 }
