--- a/Views/Tournament/Create.cshtml
+++ b/Views/Tournament/Create.cshtml
@@ -12,6 +12,12 @@
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+
+            <div class="form-group">
+                <label asp-for="title" class="control-label"></label>
+                <input asp-for="title" class="form-control" />
+                <span asp-validation-for="title" class="text-danger"></span>
+            </div>
             <div class="form-group">
                 <label asp-for="Date_Time" class="control-label"></label>
                 <input asp-for="Date_Time" class="form-control" />
