--- a/Views/Tournament/Details.cshtml
+++ b/Views/Tournament/Details.cshtml
@@ -4,51 +4,73 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+
 
 <div>
-    <h4>Tournaments</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Date_Time)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Date_Time)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.type)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.type)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Slots)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Slots)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.fee)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.fee)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Prize)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Prize)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Details)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Details)
-        </dd>
-    </dl>
+    <br/>
+    <div class="card text-center">
+        <div class="card-header">
+            <img src="~/icons/Screenshot_1.png" class="img-fluid" />
+
+        </div>
+        <div class="card-body">
+            <h5 class="card-title">@Model.title</h5>
+            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+            <div class="row" style="font-size:x-large">
+                <div class="col-sm">
+                    <i class="fas fa-clock"></i><br />
+                    @Model.Date_Time
+                </div>
+                <div class="col-sm">
+                    <i class="fas fa-award"></i><br />
+                    @Model.Prize
+                </div>
+                <div class="col-sm">
+                    <i class="fas fa-users"></i><br />
+                    @Model.Slots
+                </div>
+            </div>
+           
+                <div class="col-sm">
+                    <button class="btn btn-success" onclick="javascript:location.replace('/Payment/startpayment/@Model.Id')">Join</button>
+                    <label>Go back to <a href="/" class="">Home</a></label>
+
+                </div>
+               
+            </div>
+        <div class="card-footer text-muted">
+            <table class="table table-dark">
+                <thead>
+                    <tr>
+                        <th scope="col">#</th>
+                        <th scope="col">Players</th>
+                        <th scope="col">Last</th>
+                        <th scope="col">Handle</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th scope="row">1</th>
+                        <td>Mark</td>
+                        <td>Otto</td>
+                        <td>mdo</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">2</th>
+                        <td>Jacob</td>
+                        <td>Thornton</td>
+                        <td>fat</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">3</th>
+                        <td>Larry</td>
+                        <td>the Bird</td>
+                        <td>twitter</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+   
 </div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
-</div>
+
