--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -105,7 +105,9 @@
 
                 var UrlArray = {
 
-                    GettounamentList : "@Url.Action("GetTournamentList","Tournament")",
+                    GettounamentList: "@Url.Action("GetTournamentList","Tournament")",
+
+                    GetJoinedPlayers:"@Url.Action("GetJoinedPlayers","Tournament")",
                 }
 
     </script>
