--- a/Views/Tournament/Details.cshtml
+++ b/Views/Tournament/Details.cshtml
@@ -5,9 +5,9 @@
 }
 
 
-
+@Html.HiddenFor(m=>m.Id)
 <div>
-    <br/>
+    <br />
     <div class="card text-center">
         <div class="card-header">
             <img src="~/icons/Screenshot_1.png" class="img-fluid" />
@@ -15,6 +15,7 @@
         </div>
         <div class="card-body">
             <h5 class="card-title">@Model.title</h5>
+
             <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
             <div class="row" style="font-size:x-large">
                 <div class="col-sm">
@@ -30,47 +31,36 @@
                     @Model.Slots
                 </div>
             </div>
-           
-                <div class="col-sm">
-                    <button class="btn btn-success" onclick="javascript:location.replace('/Payment/startpayment/@Model.Id')">Join</button>
-                    <label>Go back to <a href="/" class="">Home</a></label>
 
-                </div>
-               
+            <div class="col-sm">
+                <button class="btn btn-success" onclick="javascript:location.replace('/Payment/startpayment/@Model.Id')">Join</button>
+                <label>Go back to <a href="/" class="">Home</a></label>
+
             </div>
+
+        </div>
         <div class="card-footer text-muted">
             <table class="table table-dark">
                 <thead>
                     <tr>
                         <th scope="col">#</th>
                         <th scope="col">Players</th>
-                        <th scope="col">Last</th>
-                        <th scope="col">Handle</th>
+                        <th scope="col">Country</th>
                     </tr>
                 </thead>
-                <tbody>
-                    <tr>
-                        <th scope="row">1</th>
-                        <td>Mark</td>
-                        <td>Otto</td>
-                        <td>mdo</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">2</th>
-                        <td>Jacob</td>
-                        <td>Thornton</td>
-                        <td>fat</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">3</th>
-                        <td>Larry</td>
-                        <td>the Bird</td>
-                        <td>twitter</td>
-                    </tr>
+                <tbody id="tablebody">
                 </tbody>
             </table>
         </div>
     </div>
-   
+
 </div>
 
+@section scripts {
+    <script src="~/js/details.js"></script>
+<script>
+
+
+</script>
+
+}
