profile update page

--- a/Views/Employee/Index.cshtml
+++ b/Views/Employee/Index.cshtml
@@ -10,7 +10,7 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.UserName)
+            @*//    @Html.DisplayNameFor(model => model.UserName)*@
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Phone)
@@ -31,7 +31,7 @@
 @foreach (var item in Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.UserName)
+                @*//@Html.DisplayFor(modelItem => item.UserName)*@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Phone)
