--- a/Views/Employee/editdetails.cshtml
+++ b/Views/Employee/editdetails.cshtml
@@ -1,51 +1,44 @@
-﻿    @model Asp.MVCCoreWeb.Models.Employee
+﻿@model Asp.MVCCoreWeb.Models.Employee
 
 @{
     ViewData["Title"] = "editdetails";
 }
-
-<h1>editdetails</h1>
-
-<h4>Employee</h4>
-<hr />
+</br>
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-3">
+    </div>
+    <div class="col-md-6">
         <form asp-action="editdetails">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="EmployeeID" />
-            <div class="form-group">
-                <label asp-for="UserName" class="control-label"></label>
-                <input asp-for="UserName" class="form-control" />
-                <span asp-validation-for="UserName" class="text-danger"></span>
+
+            <div class="center" style="text-align:center">
+                <img src="~/icons/profilepic.jpeg" width="35%" class="rounded rounded-circle img-fluid" alt="profile">
             </div>
+
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+
             <div class="form-group">
                 <label asp-for="Phone" class="control-label"></label>
                 <input asp-for="Phone" class="form-control" />
                 <span asp-validation-for="Phone" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Password" class="control-label"></label>
-                <input asp-for="Password" class="form-control" />
-                <span asp-validation-for="Password" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="ConfirmPassword" class="control-label"></label>
-                <input asp-for="ConfirmPassword" class="form-control" />
-                <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
-            </div>
+
             <div class="form-group">
                 <label asp-for="PubG_UserName" class="control-label"></label>
                 <input asp-for="PubG_UserName" class="form-control" />
                 <span asp-validation-for="PubG_UserName" class="text-danger"></span>
             </div>
+
+            <div class="form-group">
+                <label asp-for="Email" class="control-label"></label>
+                <input asp-for="Email" class="form-control" />
+                <span asp-validation-for="Email" class="text-danger"></span>
+            </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
+                <a href="/" class="float-right">Back to Home</a>
             </div>
         </form>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
 
