--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -43,7 +43,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-info" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
-
+                        <li class="nav-item">
+                            <a class="nav-link text-info" asp-area="" asp-controller="employee" asp-action="editdetails">Profile</a>
+                        </li>
 
                     </ul>
 
