--- a/Views/Tournament/Edit.cshtml
+++ b/Views/Tournament/Edit.cshtml
@@ -44,6 +44,16 @@
                 <span asp-validation-for="Details" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="Roomkey" class="control-label"></label>
+                <input asp-for="Roomkey" class="form-control" />
+                <span asp-validation-for="Roomkey" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Roompassword" class="control-label"></label>
+                <input asp-for="Roompassword" class="form-control" />
+                <span asp-validation-for="Roompassword" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
