new database connection

--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -37,7 +37,7 @@
         </div>
         <div asp-validation-summary="All" class="text-danger"></div>
         <div class="form-label-group">
-            <input asp-for="UserName" class="form-control" placeholder="PaytM Number" required="" autofocus="">
+            <input asp-for="UserName" class="form-control"  required="" autofocus="">
             <label asp-for="UserName"></label>
             <span asp-validation-for="UserName" class="text-danger"></span>
         </div>
