--- a/Views/Employee/editdetails.cshtml
+++ b/Views/Employee/editdetails.cshtml
@@ -15,7 +15,9 @@
             </div>
 
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            @Html.HiddenFor(m=>m.userid)
+            @Html.HiddenFor(m => m.userid)
+            @Html.HiddenFor(m => m.Password)
+            @Html.HiddenFor(m => m.ConfirmPassword)
             <div class="form-group">
                 <label asp-for="Phone" class="control-label"></label>
                 <input asp-for="Phone" class="form-control" />
@@ -34,7 +36,7 @@
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <button type="submit" value="Save" class="btn btn-primary">Update </button>
                 <a href="/" class="float-right">Back to Home</a>
             </div>
         </form>
