--- a/Views/Tournament/Edit.cshtml
+++ b/Views/Tournament/Edit.cshtml
@@ -14,6 +14,11 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
+                <label asp-for="title" class="control-label"></label>
+                <input asp-for="title" class="form-control" />
+                <span asp-validation-for="title" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="Date_Time" class="control-label"></label>
                 <input asp-for="Date_Time" class="form-control" />
                 <span asp-validation-for="Date_Time" class="text-danger"></span>
